# text-to-handwriting

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  pyproject.toml
src/: font_configs.py  gemini.py  handwriting_generator.py  main.py  pdf_converter.py  text_processor.py
